CHATS_SIT/force-app/main/default/objects/T_APPLN_PRCS_STATUS__c.object
<CustomObject>
    <description>Track PEAK application processing</description>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <description>CDE_COUNTY</description>
        <label>CDE_COUNTY</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_REASON_CNCLN__c</fullName>
        <description>CDE_REASON_CNCLN</description>
        <label>CDE_REASON_CNCLN</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_STATUS_APPLN__c</fullName>
        <description>CDE_STATUS_APPLN</description>
        <label>CDE_STATUS_APPLN</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_STATUS_TFR__c</fullName>
        <description>CDE_STATUS_TFR</description>
        <label>CDE_STATUS_TFR</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_RCVD_APPLN__c</fullName>
        <description>DTE_RCVD_APPLN</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>DTE_RCVD_APPLN</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_REVIEW__c</fullName>
        <description>DTE_REVIEW</description>
        <label>DTE_REVIEW</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IDN_APPLN</description>
        <label>IDN_APPLN</label>
        <referenceTo>T_APPLN_CASE__c</referenceTo>
        <relationshipLabel>Application Process Status</relationshipLabel>
        <relationshipName>Application_case_29</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <description>IDN_CASE</description>
        <label>IDN_CASE</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_OFFICE__c</fullName>
        <description>IDN_OFFICE</description>
        <label>IDN_OFFICE</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_USER_REVIEW__c</fullName>
        <description>IDN_USER_REVIEW</description>
        <label>IDN_USER_REVIEW</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_WORKER_REVIEW_CCIS__c</fullName>
        <description>IND_WORKER_REVIEW_CCIS</description>
        <label>IND_WORKER_REVIEW_CCIS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_SEQ_STATUS_PRCS_APPLN__c</fullName>
        <description>NBR_SEQ_STATUS_PRCS_APPLN</description>
        <label>NBR_SEQ_STATUS_PRCS_APPLN</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBR_SEQ_WRKLD__c</fullName>
        <description>NBR_SEQ_WRKLD</description>
        <label>NBR_SEQ_WRKLD</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application Process Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APRCS_STATUS-{0}</displayFormat>
        <label>Application Process Status ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Process Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>